Bug 286804 Newline improperly getting into single-line edit field. r=timeless, sr=neil.parkwaycc.co.uk